Fri Jul 19 15:32:57 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (rb_ary_store): use RARRAY_PTR_USE() intead of RARRAY_PTR().
	  Clearing memory space doesn't need WBs.

Fri Jul 19 15:19:37 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (ary_ensure_room_for_push): use RARRAY_RAWPTR() instead of
	  RARRAY_PTR. In this code, there are no "write" operation.

	* array.c (rb_ary_equal): ditto.

	* array.c (recursive_equal): ditto.

Fri Jul 19 15:09:22 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c, internal.h (rb_gc_writebarrier_remember_promoted): add a new
	  function to remember an specified object. This api is only
	  experimental (strongly depend on WB/rgengc strategy).

Fri Jul 19 14:56:00 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (ary_unprotect_logging): use (void *) for first parameter
	  because VALUE is not defined before including ruby/ruby.h.

Fri Jul 19 14:19:48 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* ext/pathname/pathname.c (path_inspect): use PRIsVALUE to preserve
	  the result encoding.

Fri Jul 19 12:35:41 2013  Tanaka Akira  <akr@fsij.org>

	* test/socket/test_tcp.rb (test_initialize_failure): Use EADDRNOTAVAIL
	  to test an error message generated by bind() failure.

Fri Jul 19 11:27:38 2013  Zachary Scott  <e@zzak.io>

	* lib/racc/parser.rb: [DOC] Capitalize "Ruby" in documentation
	  Patch by Dave Worth https://github.com/ruby/ruby/pull/341

Fri Jul 19 11:26:28 2013  Zachary Scott  <e@zzak.io>

	* ext/psych/lib/psych*: [DOC] Capitalize "Ruby" in documentation
	  Patch by Dave Worth https://github.com/ruby/ruby/pull/341

Fri Jul 19 11:25:12 2013  Zachary Scott  <e@zzak.io>

	* lib/rdoc/*: [DOC] Capitalize "Ruby" in documentation
	  Patch by Dave Worth https://github.com/ruby/ruby/pull/341

Fri Jul 19 11:23:55 2013  Zachary Scott  <e@zzak.io>

	* lib/rubygems*: [DOC] Capitalize "Ruby" in documentation
	  Patch by Dave Worth https://github.com/ruby/ruby/pull/341

Fri Jul 19 11:16:54 2013  Akinori MUSHA  <knu@iDaemons.org>
